5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1332.log
== TEST (2019-03-14 16:08:18) 
-- CODE:
aresta =
area = 
 
print(round(3/2*(3)**0.5*5**2, 4))
-- ERROR:
File "XXXX", line 1
    aresta =
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:08:20) 
-- CODE:
aresta =
area = 
 
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.155061
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 1
    aresta =
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:08:30) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:08:30) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- EXECUTION TIME:
0.11878
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:08:37) 
-- CODE:
print(round(3/2*(3)**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:16:01) 
-- CODE:
print(round(3/2*3**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:16:03) 
-- CODE:
print(round(3/2*3**0.5*5**2, 4))
-- EXECUTION TIME:
0.207769
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:17:15) 
-- CODE:
print(round(3/2*3**0.5*5**2, 4))
-- EXECUTION TIME:
0.144363
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 14:14:17) 
-- CODE:
print(round(3/2*3**0.5*5**2, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 14:14:18) 
-- CODE:
print(round(3/2*3**0.5*5**2, 4))
-- EXECUTION TIME:
0.163294
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
